themes/startwords/assets/scss/issue/_list.scss
/* issue list page styles */

body.issue-list {

    // special summary display
    .issue-summary {
        .pubdate,
        .number {
            margin: 0 0 0 rem(40px);
            line-height: 1.2;
        }

        .number { font-weight: bold; }
        .pubdate { font-weight: 400; }

        .theme {
            font-weight: 900;
            font-size: rem(60px);
            word-wrap: break-word;
            margin: rem(10px) 0 0;
            color: $transparent-grey;
            line-height: rem(50px);
            
            // scaled width
            max-width: rem(200px);
            @media (min-width: $breakpoint-m) { max-width: rem(300px); }
        }
    }

    main ol {
        list-style: none;
        padding: 0;
        margin: rem(80px) 0 0;
    }

    main li + li {
        margin-top: rem(30px);
    }

    main li a {
        text-decoration: none;
        display: block;

        .theme {
            padding-right: rem(40px);
            position: relative;
        }

        // red arrows when links are hovered
        .theme::after {
            content: url('/link-arrow-right.svg');
            position: absolute;
            height: rem(22px);
            top: calc(50% - 33px);
            right: rem(10px);
            transition: right 0.2s ease;
        }

        // movement effect
        &:hover,
        &:focus {
            .theme::after { right: 0; }
        }
    }
}

